--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://vaishnavratheesh2026:mayaratheesh@cluster0.p06gw.mongodb.net/civic?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_here
 GOOGLE_CLIENT_ID=289773391020-da1s5ueqalq5v2ppe01ujm9m0ordiomg.apps.googleusercontent.com
+EMAIL_PASSWORD=vset afhc yyqn zhdi
