--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-MONGO_URI=mongodb+srv://vaishnavratheesh2026:mayaratheesh@cluster0.p06gw.mongodb.net/civic?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_jwt_secret_here
+MONGO_URI=mongodb+srv://vaishnavratheesh2026:mayaratheesh@cluster0.p06gw.mongodb.net/civic?
+retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=civic_plus_jwt_secret_key_2024_secure
 GOOGLE_CLIENT_ID=289773391020-da1s5ueqalq5v2ppe01ujm9m0ordiomg.apps.googleusercontent.com
-EMAIL_PASSWORD=vset afhc yyqn zhdi
+EMAIL_PASS  =vset afhc yyqn zhdi
 FRONTEND_URL=http://localhost:5173
 
 CLOUDINARY_CLOUD_NAME=dmxtgfaq2
 CLOUDINARY_API_KEY=	519116425418852
 CLOUDINARY_API_SECRET=_DQYVVaHTBDWQ8L0u9R_MA_0iXU
+
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyBvaAFVs6SkzyL2inovZqFYgcpjPLhO8I8
