--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "string-similarity": "^4.0.4",
     "sweetalert2": "^11.23.0"
   },
