--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=3002
-
+﻿PORT=3002
 NODE_ENV=development
-
 MONGO_URI=mongodb+srv://vaishnavratheesh2026:mayaratheesh@cluster0.p06gw.mongodb.net/civic?retryWrites=true&w=majority
-
 JWT_SECRET=your_jwt_secret_here_change_in_production
+EMAIL_USER=vaishnavratheesh27@gmail.com
+EMAIL_PASS=focvjazaqzlxkrny
+EMAIL_FROM=vaishnavratheesh27@gmail.com
